tests/NormalTests/paczka1/fuzzy1/20705002.err
Error in line 3: g7fmWcwhr A748 23,0
Error in line 7: XKd3kxbcYD A748 26,97
Error in line 6: XKd3kxbcYD S720 85,1
Error in line 13: g7fmWcwhr S223 7,8
Error in line 20: g7fmWcwhr S236 21,3
Error in line 26: S236 S720 39,53
Error in line 25: Bz4TVLoVHN S720 71,7
